--- a/src/application/SelectionScene.fxml
+++ b/src/application/SelectionScene.fxml
@@ -54,9 +54,9 @@
       </AnchorPane>
    </left>
    <center>
-      <AnchorPane prefHeight="600.0" prefWidth="625.0" BorderPane.alignment="CENTER">
+      <AnchorPane id="_background" prefHeight="600.0" prefWidth="625.0" stylesheets="@SelectionSceneStyleSheet.css" BorderPane.alignment="CENTER">
          <children>
-            <Label layoutX="126.0" layoutY="127.0" prefHeight="70.0" prefWidth="411.0" text="Type in a Name">
+            <Label id="_typeInANameLabel" layoutX="126.0" layoutY="127.0" prefHeight="70.0" prefWidth="411.0" stylesheets="@SelectionSceneStyleSheet.css" text="Type in a Name">
                <font>
                   <Font size="48.0" />
                </font>
@@ -76,14 +76,14 @@
                   <Font size="18.0" />
                </font>
             </JFXButton>
-            <CustomTextField fx:id="_nameTextField" layoutX="126.0" layoutY="228.0" prefHeight="38.0" prefWidth="410.0" />
-            <Label fx:id="_pointsLabel" layoutX="507.0" layoutY="39.0" prefHeight="41.0" prefWidth="59.0" text="Label" />
+            <CustomTextField id="_searchBar" fx:id="_nameTextField" layoutX="126.0" layoutY="228.0" prefHeight="38.0" prefWidth="410.0" stylesheets="@SelectionSceneStyleSheet.css" />
+            <Label id="_pointLabel" fx:id="_pointsLabel" layoutX="507.0" layoutY="39.0" prefHeight="41.0" prefWidth="59.0" stylesheets="@SelectionSceneStyleSheet.css" text="Label" />
             <ImageView fitHeight="59.0" fitWidth="63.0" layoutX="432.0" layoutY="30.0">
                <image>
                   <Image url="@../../resources/Yellow_Star.png" />
                </image>
             </ImageView>
-            <JFXButton fx:id="_shopButton" layoutX="425.0" layoutY="474.0" onAction="#shopClicked" prefHeight="76.0" prefWidth="140.0" text="Shop">
+            <JFXButton id="_shopButton" fx:id="_shopButton" layoutX="425.0" layoutY="474.0" onAction="#shopClicked" prefHeight="76.0" prefWidth="140.0" stylesheets="@SelectionSceneStyleSheet.css" text="Shop">
                <font>
                   <Font size="18.0" />
                </font>
