--- a/src/application/ShopScene.fxml
+++ b/src/application/ShopScene.fxml
@@ -18,6 +18,11 @@
       <AnchorPane id="_defaultThemePane" prefHeight="465.0" prefWidth="300.0" stylesheets="@ShopSceneStyleSheet.css" BorderPane.alignment="CENTER">
          <children>
             <JFXButton id="_defaultThemeButton" fx:id="_defaultThemeButton" buttonType="RAISED" layoutX="61.0" layoutY="321.0" onAction="#defaultThemeClicked" prefHeight="99.0" prefWidth="214.0" stylesheets="@ShopSceneStyleSheet.css" text="Default Theme" />
+            <Label alignment="CENTER" layoutX="49.0" layoutY="14.0" prefHeight="77.0" prefWidth="203.0" text="Cost: FREE">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </left>
@@ -25,6 +30,11 @@
       <AnchorPane id="_darkThemePane" prefHeight="465.0" prefWidth="300.0" stylesheets="@ShopSceneStyleSheet.css" BorderPane.alignment="CENTER">
          <children>
             <JFXButton id="_darkThemeButton" fx:id="_darkThemeButton" buttonType="RAISED" layoutX="43.0" layoutY="319.0" onAction="#darkThemeClicked" prefHeight="99.0" prefWidth="214.0" stylesheets="@ShopSceneStyleSheet.css" text="Dark Theme" />
+            <Label alignment="CENTER" layoutX="49.0" layoutY="14.0" prefHeight="77.0" prefWidth="203.0" text="Cost: 3">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </center>
@@ -32,6 +42,11 @@
       <AnchorPane prefHeight="465.0" prefWidth="300.0" stylesheets="@ShopSceneStyleSheet.css" BorderPane.alignment="CENTER">
          <children>
             <JFXButton buttonType="RAISED" layoutX="52.0" layoutY="313.0" prefHeight="99.0" prefWidth="214.0" stylesheets="@ShopSceneStyleSheet.css" text="3rd Theme" />
+            <Label alignment="CENTER" layoutX="58.0" layoutY="14.0" prefHeight="77.0" prefWidth="203.0" text="Cost: ?">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </right>
