--- a/src/application/ShopScene.fxml
+++ b/src/application/ShopScene.fxml
@@ -2,22 +2,17 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane id="_background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" stylesheets="@ShopSceneStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ShopSceneController">
-   <top>
-      <Label id="_shopLabel" alignment="CENTER" prefHeight="135.0" prefWidth="463.0" stylesheets="@ShopSceneStyleSheet.css" text="Shop" textAlignment="CENTER" BorderPane.alignment="CENTER">
-         <font>
-            <Font size="74.0" />
-         </font>
-      </Label>
-   </top>
    <left>
       <AnchorPane id="_defaultThemePane" prefHeight="465.0" prefWidth="300.0" stylesheets="@ShopSceneStyleSheet.css" BorderPane.alignment="CENTER">
          <children>
-            <JFXButton id="_defaultThemeButton" fx:id="_defaultThemeButton" buttonType="RAISED" layoutX="61.0" layoutY="321.0" onAction="#defaultThemeClicked" prefHeight="99.0" prefWidth="214.0" stylesheets="@ShopSceneStyleSheet.css" text="Default Theme" />
+            <JFXButton id="_defaultThemeButton" fx:id="_defaultThemeButton" buttonType="RAISED" layoutX="83.0" layoutY="311.0" onAction="#defaultThemeClicked" prefHeight="78.0" prefWidth="135.0" stylesheets="@ShopSceneStyleSheet.css" text="Default Theme" />
             <Label alignment="CENTER" layoutX="49.0" layoutY="14.0" prefHeight="77.0" prefWidth="203.0" text="Cost: FREE">
                <font>
                   <Font size="36.0" />
@@ -29,7 +24,7 @@
    <center>
       <AnchorPane id="_darkThemePane" prefHeight="465.0" prefWidth="300.0" stylesheets="@ShopSceneStyleSheet.css" BorderPane.alignment="CENTER">
          <children>
-            <JFXButton id="_darkThemeButton" fx:id="_darkThemeButton" buttonType="RAISED" layoutX="43.0" layoutY="319.0" onAction="#darkThemeClicked" prefHeight="99.0" prefWidth="214.0" stylesheets="@ShopSceneStyleSheet.css" text="Dark Theme" />
+            <JFXButton id="_darkThemeButton" fx:id="_darkThemeButton" buttonType="RAISED" layoutX="61.0" layoutY="309.0" onAction="#darkThemeClicked" prefHeight="81.0" prefWidth="164.0" stylesheets="@ShopSceneStyleSheet.css" text="Dark Theme" />
             <Label alignment="CENTER" layoutX="49.0" layoutY="14.0" prefHeight="77.0" prefWidth="203.0" text="Cost: 3">
                <font>
                   <Font size="36.0" />
@@ -41,7 +36,7 @@
    <right>
       <AnchorPane prefHeight="465.0" prefWidth="300.0" stylesheets="@ShopSceneStyleSheet.css" BorderPane.alignment="CENTER">
          <children>
-            <JFXButton buttonType="RAISED" layoutX="52.0" layoutY="313.0" prefHeight="99.0" prefWidth="214.0" stylesheets="@ShopSceneStyleSheet.css" text="3rd Theme" />
+            <JFXButton buttonType="RAISED" layoutX="76.0" layoutY="300.0" prefHeight="88.0" prefWidth="167.0" stylesheets="@ShopSceneStyleSheet.css" text="3rd Theme" />
             <Label alignment="CENTER" layoutX="58.0" layoutY="14.0" prefHeight="77.0" prefWidth="203.0" text="Cost: ?">
                <font>
                   <Font size="36.0" />
@@ -50,4 +45,25 @@
          </children>
       </AnchorPane>
    </right>
+   <top>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label id="_marketLabel" alignment="CENTER" layoutX="52.0" layoutY="31.0" prefHeight="125.0" prefWidth="359.0" stylesheets="@ShopSceneStyleSheet.css" text="Market">
+               <font>
+                  <Font size="72.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="54.0" fitWidth="55.0" layoutX="629.0" layoutY="67.0">
+               <image>
+                  <Image url="@../../resources/Yellow_Star.png" />
+               </image>
+            </ImageView>
+            <Label id="_pointLabel" fx:id="_pointLabel" layoutX="701.0" layoutY="71.0" prefHeight="46.0" prefWidth="78.0" stylesheets="@ShopSceneStyleSheet.css" text="points">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+   </top>
 </BorderPane>
